@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.2 on Tue Apr  8 17:22:02 2008 -->
+<!--Generated with glade3 3.4.5 on Sat Jul 26 12:59:16 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="dummy_window">
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -50,6 +50,7 @@
                     <property name="enable_search">False</property>
                     <signal name="popup_menu" handler="on_partition_list_treeview_popup_menu"/>
                     <signal name="button_press_event" handler="on_partition_list_treeview_button_press_event"/>
+                    <signal name="key_press_event" handler="on_partition_list_treeview_key_press_event"/>
                     <signal name="row_activated" handler="on_partition_list_treeview_row_activated"/>
                   </widget>
                 </child>
