@@ -30,6 +30,8 @@ ubiquity (1.9.7) UNRELEASED; urgency=low
       on_language_treeview_selection_changed will take care of it if
       necessary, and the page-switch handler may not know the correct
       language (LP: #225876).
+    - Bind the Delete key on the partition list to "Delete partition"
+      (LP: #218936).
 
  -- Evan Dandrea <evand@ubuntu.com>  Wed, 23 Jul 2008 15:37:27 -0400
 
